--- a/app/src/main/res/drawable/ic_more_options.xml
+++ b/app/src/main/res/drawable/ic_more_options.xml
@@ -1,10 +1,9 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="24dp"
-    android:height="24dp"
+    android:width="35dp"
+    android:height="36dp"
     android:viewportWidth="24"
     android:viewportHeight="24">
     <path
-        android:fillColor="#000000"
+        android:fillColor="#FFFFFF"
         android:pathData="M16.5,12a1.5,1.5 0 1,0 -1.5,-1.5 1.5,1.5 0 0,0 1.5,1.5zM13.5,12a1.5,1.5 0 1,0 -1.5,-1.5 1.5,1.5 0 0,0 1.5,1.5zM10.5,12a1.5,1.5 0 1,0 -1.5,-1.5 1.5,1.5 0 0,0 1.5,1.5z"/>
-
 </vector>
